// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`green candle: should fill entry 1`] = `
{
  "asset": {
    "entryOrder": {
      "price": 55,
      "side": "sell",
      "size": 1,
      "type": "limit",
    },
    "position": {
      "side": "short",
      "size": 1,
    },
    "stopLoss": null,
    "takeProfit": null,
    "trades": [],
    "transactions": [
      {
        "commission": 1,
        "price": 55,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 154,
}
`;

exports[`green candle: should fill entry and sl immediately 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -2,
        "entry": {
          "commission": 1,
          "price": 50,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 50,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "long",
          "size": 1,
        },
        "relativeProfit": -0.04,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 50,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 50,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 98,
}
`;

exports[`green candle: should fill entry at body, skip sl in body below entry, fill tp at high 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": 13,
        "entry": {
          "commission": 1,
          "price": 55,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 70,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "long",
          "size": 1,
        },
        "relativeProfit": 0.23636363636363636,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 55,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 70,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 113,
}
`;

exports[`green candle: should fill entry at bottom tail, fill sl at bottom tail, skip tp at high 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -7,
        "entry": {
          "commission": 1,
          "price": 45,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 40,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "long",
          "size": 1,
        },
        "relativeProfit": -0.15555555555555556,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 45,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 40,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 93,
}
`;

exports[`green candle: should fill entry at bottom tail, skip sl below tail, fill tp at high 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": 28,
        "entry": {
          "commission": 1,
          "price": 40,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 70,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "long",
          "size": 1,
        },
        "relativeProfit": 0.7,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 40,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 70,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 128,
}
`;

exports[`green candle: should fill short entry at body, skip tp in body below entry, fill sl at high 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -17,
        "entry": {
          "commission": 1,
          "price": 55,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 70,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "short",
          "size": 1,
        },
        "relativeProfit": -0.3090909090909091,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 55,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 70,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 83,
}
`;

exports[`red candle: should fill entry 1`] = `
{
  "asset": {
    "entryOrder": {
      "price": 45,
      "side": "buy",
      "size": 1,
      "type": "limit",
    },
    "position": {
      "side": "long",
      "size": 1,
    },
    "stopLoss": null,
    "takeProfit": null,
    "trades": [],
    "transactions": [
      {
        "commission": 1,
        "price": 45,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 54,
}
`;

exports[`red candle: should fill entry and sl immediately 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -2,
        "entry": {
          "commission": 1,
          "price": 50,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 50,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "short",
          "size": 1,
        },
        "relativeProfit": -0.04,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 50,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 50,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 98,
}
`;

exports[`red candle: should fill entry at body, skip sl in body above entry, fill tp at low 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": 13,
        "entry": {
          "commission": 1,
          "price": 45,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 30,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "short",
          "size": 1,
        },
        "relativeProfit": 0.28888888888888886,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 45,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 30,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 113,
}
`;

exports[`red candle: should fill entry at top tail, fill sl at top tail, skip tp at low 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -7,
        "entry": {
          "commission": 1,
          "price": 55,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 60,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "short",
          "size": 1,
        },
        "relativeProfit": -0.12727272727272726,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 55,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 60,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 93,
}
`;

exports[`red candle: should fill entry at top tail, skip sl above tail, fill tp at low 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": 28,
        "entry": {
          "commission": 1,
          "price": 60,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 30,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "short",
          "size": 1,
        },
        "relativeProfit": 0.4666666666666667,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 60,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 30,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 128,
}
`;

exports[`red candle: should fill long entry at body, skip tp in body above entry, fill sl at low 1`] = `
{
  "asset": {
    "entryOrder": null,
    "position": null,
    "stopLoss": null,
    "takeProfit": null,
    "trades": [
      {
        "absoluteProfit": -17,
        "entry": {
          "commission": 1,
          "price": 45,
          "side": "buy",
          "size": 1,
          "time": 1,
        },
        "exit": {
          "commission": 1,
          "price": 30,
          "side": "sell",
          "size": 1,
          "time": 1,
        },
        "position": {
          "side": "long",
          "size": 1,
        },
        "relativeProfit": -0.37777777777777777,
        "symbol": "foo",
      },
    ],
    "transactions": [
      {
        "commission": 1,
        "price": 45,
        "side": "buy",
        "size": 1,
        "time": 1,
      },
      {
        "commission": 1,
        "price": 30,
        "side": "sell",
        "size": 1,
        "time": 1,
      },
    ],
  },
  "cash": 83,
}
`;
